--- a/index.html
+++ b/index.html
@@ -125,6 +125,41 @@
                       </div>
                     </div>
             </section>
+            <section class="container">
+                <h1>shoes</h1>
+                <div class="card-group">
+                    <div class="card mx-3 border-0 bg-light">
+                      <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">supply 350</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                      <div class="card-footer">
+                        <button class="btn btn-warning">buy now</button>
+                      </div>
+                    </div>
+                    <div class="card mx-3 border-0 bg-light">
+                      <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">nike</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                      <div class="card-footer">
+                        <button class="btn btn-warning">buy now</button>
+                      </div>
+                    </div>
+                    <div class="card  mx-3 border-0 bg-light">
+                      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">red aimax</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      </div>
+                      <div class="card-footer">
+                        <button class="btn btn-warning">buy now</button>
+                      </div>
+                    </div>
+                  </div>
+            </section>
       </main>
       <footer>
 
